// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileCard should hide the settings icon 1`] = `
<div>
  <div
    class="sc-AxjAm eWJHeF"
  >
    <div
      class="relative px-6 py-4 sm:flex sm:items-center"
    >
      <div
        class="flex flex-row justify-between w-full"
      >
        <div
          class="flex items-center"
        >
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ikUhMz"
            data-testid="profile-card__user--avatar"
          >
            <img
              alt="Oleg Gelo"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"50\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"35\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
              title="Oleg Gelo"
            />
          </div>
          <div
            class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
          >
            <p
              class="text-sm font-semibold text-theme-neutral"
            >
              Name
            </p>
            <p
              class="font-semibold text-theme-neutral-dark"
              data-testid="profile-card__user--name"
            >
              Oleg Gelo
            </p>
          </div>
        </div>
        <div
          class="flex items-center"
        >
          <div
            class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
          >
            <p
              class="text-sm font-semibold text-theme-neutral"
            >
              Total balance
            </p>
            <p
              class="font-semibold text-theme-neutral-dark"
              data-testid="profile-card__user--balance"
            >
              234,500.46 USD
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProfileCard should render 1`] = `
<DocumentFragment>
  <div
    class="sc-AxjAm eWJHeF"
  >
    <div
      class="relative px-6 py-4 sm:flex sm:items-center"
    >
      <div
        class="absolute top-0 right-0 flex items-center justify-center w-6 h-6 p-1 mt-3 -mt-2 -mr-4 text-theme-neutral-light"
      >
        <div
          class="relative"
          data-testid="dropdown__toggle"
        >
          <div
            class="float-right outline-none cursor-pointer focus:outline-none"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                settings.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-row justify-between w-full"
      >
        <div
          class="flex items-center"
        >
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ikUhMz"
            data-testid="profile-card__user--avatar"
          >
            <img
              alt="Oleg Gelo"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"50\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"35\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
              title="Oleg Gelo"
            />
          </div>
          <div
            class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
          >
            <p
              class="text-sm font-semibold text-theme-neutral"
            >
              Name
            </p>
            <p
              class="font-semibold text-theme-neutral-dark"
              data-testid="profile-card__user--name"
            >
              Oleg Gelo
            </p>
          </div>
        </div>
        <div
          class="flex items-center"
        >
          <div
            class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
          >
            <p
              class="text-sm font-semibold text-theme-neutral"
            >
              Total balance
            </p>
            <p
              class="font-semibold text-theme-neutral-dark"
              data-testid="profile-card__user--balance"
            >
              234,500.46 USD
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProfileCard should render the settings icon 1`] = `
<div>
  <div
    class="sc-AxjAm eWJHeF"
  >
    <div
      class="relative px-6 py-4 sm:flex sm:items-center"
    >
      <div
        class="absolute top-0 right-0 flex items-center justify-center w-6 h-6 p-1 mt-3 -mt-2 -mr-4 text-theme-neutral-light"
      >
        <div
          class="relative"
          data-testid="dropdown__toggle"
        >
          <div
            class="float-right outline-none cursor-pointer focus:outline-none"
          >
            <div
              class="sc-AxirZ eEbZjj"
              height="20"
              width="20"
            >
              <svg>
                settings.svg
              </svg>
            </div>
          </div>
        </div>
      </div>
      <div
        class="flex flex-row justify-between w-full"
      >
        <div
          class="flex items-center"
        >
          <div
            class="Avatar__AvatarWrapper-sc-1vsy2s2-0 ikUhMz"
            data-testid="profile-card__user--avatar"
          >
            <img
              alt="Oleg Gelo"
              src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 100 100\\"><style>circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(33, 150, 243)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"60\\" cy=\\"50\\" fill=\\"rgb(255, 87, 34)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"40\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"35\\" cx=\\"50\\" cy=\\"70\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
              title="Oleg Gelo"
            />
          </div>
          <div
            class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-left"
          >
            <p
              class="text-sm font-semibold text-theme-neutral"
            >
              Name
            </p>
            <p
              class="font-semibold text-theme-neutral-dark"
              data-testid="profile-card__user--name"
            >
              Oleg Gelo
            </p>
          </div>
        </div>
        <div
          class="flex items-center"
        >
          <div
            class="mt-4 text-center sm:mt-0 sm:ml-4 sm:text-right"
          >
            <p
              class="text-sm font-semibold text-theme-neutral"
            >
              Total balance
            </p>
            <p
              class="font-semibold text-theme-neutral-dark"
              data-testid="profile-card__user--balance"
            >
              234,500.46 USD
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
